[feat] - ombre dans l'eau - [fix] - toggle switch version mobile sons

--- a/client/src/styles/DeskFooter.module.css
+++ b/client/src/styles/DeskFooter.module.css
@@ -357,11 +357,51 @@
     position: absolute;
     animation: noarfangAnimate 15s infinite linear;
   }
+
+  .pokemon_water {
+    grid-area: 1 / 30 / 3 / 31;
+    height: 25px;
+    width: 25px;
+    margin: auto;
+    border-radius: 50%;
+  }
+
+  .animationWater {
+    animation: pokemonWater 2s ease-in-out infinite;
+    animation-timing-function: ease-out;
+  }
+
+  .escape {
+    animation: escape 2s ease-in-out;
+  }
 }
 
 .animationBush {
   animation: bush 1s ease-in-out infinite;
   filter: blur(0px);
+}
+
+@keyframes escape {
+  20% {
+    scale: 1.2;
+  }
+  100% {
+    scale: -1;
+    display: none;
+  }
+}
+
+@keyframes pokemonWater {
+  0% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+  }
+  50% {
+    scale: 1.1;
+    box-shadow: 0 0 0 7px 50px rgba(255, 255, 255, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+  }
 }
 
 @keyframes noarfangAnimate {
