--- a/client/src/styles/PokedexScreen.module.css
+++ b/client/src/styles/PokedexScreen.module.css
@@ -47,10 +47,10 @@
     appearance: none;
     position: relative;
     grid-area: 1 / 7 / 2 / 9;
-    width: 100%;
+    width: 4.5rem;
     background-color: var(--color-sButton-tertiary);
     padding: 0.5rem;
-    height: 30px;
+    height: 25px;
     border-radius: 50px;
     margin: auto;
     box-shadow: rgba(45, 192, 0, 0.25) 0px 30px 60px -12px inset,
@@ -60,10 +60,10 @@
   input[type="checkbox"]::after {
     content: "";
     position: absolute;
-    top: 4px;
-    left: 4px;
-    height: 22px;
-    width: 22px;
+    top: 3px;
+    left: 3px;
+    height: 19px;
+    width: 19px;
     border-radius: 50%;
     background-color: var(--color-frame-image);
     transition: left 0.3s;
@@ -76,7 +76,7 @@
   }
 
   input[type="checkbox"]:checked::after {
-    left: 72%;
+    left: 50px;
   }
 
   .volumeOff {
